--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
+      <TrustedBy />
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
