--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
     <script src="https://files.bpcontent.cloud/2025/05/06/12/20250506124538-5RPSA2F2.js"></script> 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/jh.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Hoarders - Get Your Dream Jobs!!</title>
   </head>
